--- a/public/package.json
+++ b/public/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
-    "emoji-picker-react": "^4.11.1",
+    "emoji-picker-react": "^3.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
@@ -17,6 +17,7 @@
     "react-toastify": "^10.0.5",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
+    "styled-components": "^6.1.12",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
